hphp/hack/test/typecheck/array/safe_vector_array/disallow_dict_where_varray_or_darray_is_required.php
<?hh

function test(): varray_or_darray<string> {
  return dict[1 => "one"];
}
